# Copyright 2011 Midokura KK
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Makefile for Sphinx documentation.

SPHINXDATA = \
	index.rst

dist_noinst_DATA = $(SPHINXDATA)

SPHINXBUILDDIR = $(builddir)/_build
SPHINXOPTS     = -q -N
PAPEROPT       = -D latex_paper_size=a4
ALLSPHINXOPTS  = -d $(SPHINXBUILDDIR)/doctrees $(PAPEROPT) $(SPHINXOPTS)
# TODO(romain): Add -W to the options, to fail on warnings, once all
# the doc has been cleaned up in the source files.

installdirs-local: installdirs-html-local installdirs-pdf-local

HTMLBUILDDIR = $(SPHINXBUILDDIR)/html
HTMLDATA = \
	$(HTMLBUILDDIR)/genindex.html \
	$(HTMLBUILDDIR)/getting.started.html \
	$(HTMLBUILDDIR)/index.html \
	$(HTMLBUILDDIR)/modindex.html \
	$(HTMLBUILDDIR)/modules.html \
	$(HTMLBUILDDIR)/search.html \
	$(HTMLBUILDDIR)/searchindex.js \
	$(HTMLBUILDDIR)/_static/basic.css \
	$(HTMLBUILDDIR)/_static/default.css \
	$(HTMLBUILDDIR)/_static/doctools.js \
	$(HTMLBUILDDIR)/_static/file.png \
	$(HTMLBUILDDIR)/_static/jquery.js \
	$(HTMLBUILDDIR)/_static/minus.png \
	$(HTMLBUILDDIR)/_static/plus.png \
	$(HTMLBUILDDIR)/_static/pygments.css \
	$(HTMLBUILDDIR)/_static/searchtools.js

# TODO(romain): Support the "dirhtml" and "singlehtml" builders in
# addition to "html".
html-local: conf.py $(SPHINXDATA)
	PYTHONPATH=$(builddir)/../src $(SPHINXBUILD) -b html $(ALLSPHINXOPTS) \
	  -c $(builddir) $(srcdir) $(HTMLBUILDDIR)

installdirs-html-local:
	for dir in "$(DESTDIR)$(htmldir)" "$(DESTDIR)$(htmldir)/_static"; do \
	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
	done

# A standard Automake install for nobase_* targets, customized to
# strip out the _build/html/ base from filenames.
install-html-local: html-local
	test -z "$(htmldir)" || $(MKDIR_P) "$(DESTDIR)$(htmldir)"
	@list='$(HTMLDATA)'; test -n "$(htmldir)" || list=; \
	$(am__nobase_list) | while read dir files; do \
	  dir=`echo "$$dir" | sed 's,^$(HTMLBUILDDIR)[^/]*,,g'`; \
	  xfiles=; for file in $$files; do \
	    if test -f "$$file"; then xfiles="$$xfiles $$file"; \
	    else xfiles="$$xfiles $(srcdir)/$$file"; fi; done; \
	  test -z "$$xfiles" || { \
	    test "x$$dir" = x. || { \
	      echo "$(MKDIR_P) '$(DESTDIR)$(htmldir)/$$dir'"; \
	      $(MKDIR_P) "$(DESTDIR)$(htmldir)/$$dir"; }; \
	    echo " $(INSTALL_DATA) $$xfiles '$(DESTDIR)$(htmldir)/$$dir'"; \
	    $(INSTALL_DATA) $$xfiles "$(DESTDIR)$(htmldir)/$$dir" || exit $$?; }; \
	done


LATEXBUILDDIR = $(SPHINXBUILDDIR)/latex
PDFDATA = $(LATEXBUILDDIR)/midolman.pdf

# TODO(romain): How to avoid patching the Makefile generated by Sphinx?
pdf-local: conf.py $(SPHINXDATA)
	PYTHONPATH=$(builddir)/../src $(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) \
	  -c $(builddir) $(srcdir) $(LATEXBUILDDIR)
	sed -e 's/^	latex/	$$(LATEX)/' \
	  -e 's/^	pdflatex/	$$(PDFLATEX)/' \
          -e 's/^	-makeindex/	-$$(MAKEINDEX)/' \
          -i $(LATEXBUILDDIR)/Makefile
	($(am__cd) $(LATEXBUILDDIR) && $(MAKE) LATEX=$(LATEX) \
	 PDFLATEX=$(PDFLATEX) MAKEINDEX=$(MAKEINDEX) $(AM_MAKEFLAGS) all-pdf)

installdirs-pdf-local:
	for dir in "$(DESTDIR)$(pdfdir)"; do \
	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
	done

install-pdf-local: pdf-local
	test -z "$(pdfdir)" || $(MKDIR_P) "$(DESTDIR)$(pdfdir)"
	@list='$(PDFDATA)'; test -n "$(pdfdir)" || list=; \
	for p in $$list; do \
	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
	  echo "$$d$$p"; \
	done | $(am__base_list) | \
	while read files; do \
	echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(pdfdir)'"; \
	  $(INSTALL_DATA) $$files "$(DESTDIR)$(pdfdir)" || exit $$?; \
	done

clean-local:
	-rm -rf $(SPHINXBUILDDIR)/*

# TODO(romain): Integrate this properly with Automake.

#text:
#	$(SPHINXBUILD) -b text $(ALLSPHINXOPTS) $(BUILDDIR)/text
#	@echo
#	@echo "Build finished. The text files are in $(BUILDDIR)/text."

#man:
#	$(SPHINXBUILD) -b man $(ALLSPHINXOPTS) $(BUILDDIR)/man
#	@echo
#	@echo "Build finished. The manual pages are in $(BUILDDIR)/man."

# TODO(romain): Make this work properly, i.e. have make fail if any doctest
# fails.

#check-local:
#	$(SPHINXBUILD) -b doctest $(ALLSPHINXOPTS) $(BUILDDIR)/doctest
#	@echo "Testing of doctests in the sources finished, look at the " \
#	      "results in $(BUILDDIR)/doctest/output.txt."

am__install_max = 40
am__nobase_strip_setup = \
  srcdirstrip=`echo "$(srcdir)" | sed 's/[].[^$$\\*|]/\\\\&/g'`
am__nobase_strip = \
  for p in $$list; do echo "$$p"; done | sed -e "s|$$srcdirstrip/||"
am__nobase_list = $(am__nobase_strip_setup); \
  for p in $$list; do echo "$$p $$p"; done | \
  sed "s| $$srcdirstrip/| |;"' / .*\//!s/ .*/ ./; s,\( .*\)/[^/]*$$,\1,' | \
  $(AWK) 'BEGIN { files["."] = "" } { files[$$2] = files[$$2] " " $$1; \
    if (++n[$$2] == $(am__install_max)) \
      { print $$2, files[$$2]; n[$$2] = 0; files[$$2] = "" } } \
    END { for (dir in files) print dir, files[dir] }'
am__base_list = \
  sed '$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;$$!N;s/\n/ /g' | \
  sed '$$!N;$$!N;$$!N;$$!N;s/\n/ /g'
